# xmonadrc

./: .gitmodules  Makefile  stack.yaml  xmonadrc.cabal  xmonadrc.hs
.stack-work/install/x86_64-linux-ncurses6/lts-7.14/8.0.1/flag-cache/: X11-1.7-5RhPpcHRMKqDNH6DKI6wnL  X11-xft-0.3.1-K5aCxhr7PdkBJ0izTORldG  data-default-0.7.1.1-5uix4eIzBY9IcVb4V2HbW3  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  data-default-instances-containers-0.0.1-B3LqdWnlDzL8N7WtQnkQ3T  data-default-instances-dlist-0.0.1-7EnnOuRxBMR4O5lm1rpRqD  data-default-instances-old-locale-0.0.1-LPOHPEJCJUa53W1ZYaHB84  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  extensible-exceptions-0.1.1.4-3h0ykvvAO915cRhUyj3rRV  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  old-locale-1.0.0.7-6glXNhHF891B41ZfuI8hU8  old-time-1.1.0.3-IcvdkJUsE9M8t3io8peAEp  random-1.1-54KmMHXjttlERYcr1mvsAe  setlocale-1.0.0.4-EUtO5CfNQTBH7QTFQEDDaI  utf8-string-1.0.1.1-2T8mBCuEDlXDo8zed8Onw4  xmonad-0.12-C7fwoSClEurF1iRX9ijBYI  xmonad-contrib-0.12-5yojTYrxlmNEezmwtDgaRd  xmonadrc-0.0.1.0-E6HMStyFiyjAVPFmc9oFTv
.stack-work/install/x86_64-linux-ncurses6/lts-7.14/8.0.1/pkgdb/: X11-1.7-5RhPpcHRMKqDNH6DKI6wnL.conf  X11-xft-0.3.1-K5aCxhr7PdkBJ0izTORldG.conf  package.cache  (+3 more)
src/XMonad/Hooks/: ToggleFade.hi  ToggleFade.hs
src/XMonad/My/: Actions.hi  Actions.hs  Commands.hi  Commands.hs  Helpers.hi  Helpers.hs  Hooks.hs  Keys.hi  Keys.hs  Layout.hi  Layout.hs  Log.hi  Log.hs  Preferences.hi  Preferences.hs  Theme.hs  Theming.hi  Theming.hs  Workspaces.hs
src/XMonad/Util/: Lemonbar.hi  Lemonbar.hs  XResources.hi  XResources.hs
(+601 files in other folders)
